refactor: modernize the usage of the Stream API