@@ -1,7 +1,6 @@
 package labs.danielpsf.reservation.config;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
@@ -36,7 +35,7 @@ public class RestExceptionHandler {
                     fieldError.setField(error.getField());
                     return fieldError;
                 })
-                .collect(Collectors.toList());
+                .toList();
         final ErrorResponse errorResponse = new ErrorResponse();
         errorResponse.setHttpStatus(HttpStatus.BAD_REQUEST.value());
         errorResponse.setException(exception.getClass().getSimpleName());
