@@ -2,7 +2,6 @@ package labs.danielpsf.reservation.user;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
@@ -21,7 +20,7 @@ public class UserService {
         return userRepository.findAll()
                 .stream()
                 .map(user -> mapToDTO(user, new UserDTO()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserDTO get(final UUID id) {
